hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_passing_darray3.php.exp
File "explicit_type_collection_passing_darray3.php", line 6, characters 3-13:
  dict<arraykey, bool>
ERROR: File "explicit_type_collection_passing_darray3.php", line 8, characters 10-11:
Invalid argument (Typing[4110])
  File "explicit_type_collection_passing_darray3.php", line 3, characters 24-29:
  Expected `string`
  File "explicit_type_collection_passing_darray3.php", line 5, characters 8-53:
  But got `arraykey`
